# VisibilityAndResourceManager

./: CMakeLists.txt  README.md
CMakeModules/: FindDirectX.cmake
D2DTextRender/: CDirect2DTextRenderer.cpp  CDirect2DTextRenderer.h  D2DTextRender.vcxproj  D2DTextRender.vcxproj.filters  IAbstractTextRenderer.h  MonoTextRenderer.cpp  MonoTextRenderer.h  StereoTextRenderer.cpp  StereoTextRenderer.h  TextRenderer.sln  TextRenderer.vcxproj  TextRenderer.vcxproj.filters  TextRendererTestApp.cpp  string_cast.hpp
HeightfieldConverter/: AbstractConverter.h  ComputeExample.cpp  DirectComputeConverter.cpp  DirectComputeConverter.h  HeightfieldConverter.cpp  HeightfieldConverter.h  HeightfieldConverter.sln  HeightfieldConverter.vcxproj  HeightfieldConverter.vcxproj.filters  HeightfieldConverterPrivate.cpp  HeightfieldConverterPrivate.h  HeightfieldConverterTest.vcxproj  HeightfieldConverterTest.vcxproj.filters  HeightfieldConverterTestApp.cpp  HeightfieldTestRenderer.h  SoftwareConverter.cpp  SoftwareConverter.h  vecmath.h
HeightfieldConverter/TestApp/: TestApp.vcxproj  TestApp.vcxproj.filters  d3dclass.cpp  d3dclass.h  graphicsclass.cpp  graphicsclass.h  light.ps  light.vs  lightshaderclass.cpp  modelclass.cpp  modelclass.h  systemclass.cpp  textureclass.cpp
NewSLN/3D_Release/ComputeShaders/: Common.fx  HFC.fx  HeightfieldConverter.hlsl
NewSLN/3D_Release/PlanetTerrainViewerShaders/: SimpleTerrain.ps  SimpleTerrain.vs
NewSLN/PlanetTerrainViewer/: Application.cpp  Application.h  BasicEffect.cpp  Camera.cpp  Camera.h  CommonStates.cpp  ConstantBuffer.h  DemandCreate.h  Direct3DSystem.cpp  Direct3DSystem.h  EffectCommon.cpp  Effects.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsMemory.cpp  KeyboardInput.cpp  KeyboardInput.h  Main.cpp  PlanetCameraController.cpp  PlanetCameraController.h  PlanetTerrainViewer.sln  PlanetTerrainViewer.vcxproj  PrimitiveBatch.cpp  PrimitiveBatch.h  Scene.cpp  Scene.h  SimpleTerrain.ps  SimpleTerrainRenderer.cpp  SimpleTerrainRenderer.h  TextureLoadQueue.cpp  TextureLoadQueue.h  VertexTypes.cpp
NewSLN/PlanetTerrainViewer/Shaders/: BasicEffect.fx  CompileShaders.cmd  DebugEffect.fx  EnvironmentMapEffect.fx  Lighting.fxh  NormalMapEffect.fx  PBRCommon.fxh  PBREffect.fx  PostProcess.fx  SkinnedEffect.fx  ToneMap.fx  Utilities.fxh
NewSLN/RenderLibs/: RenderLibs.sln
NewSLN/RenderLibs/Common/: Debug.h  FileUtil.cpp  Log.cpp  Log.h  StlUtil.h  vecmath.cpp  vecmath.h  (+2 more)
NewSLN/TerrainManager/: TerrainManagerParameters.txt  TerrainRenderingProject.sln
PlanetTerrainRender/: PlanetTerrainRender.sln
PlanetTerrainRender/Common/: Debug.cpp  Log.cpp  Log.h  StlUtil.cpp  StlUtil.h  mathmisc.h  vecmath.h  wgs84.cpp  wgs84.h
PlanetTerrainRender/DdsGenerator/: DdsGenerator.cpp  DdsGenerator.h  DdsGenerator.vcxproj
PlanetTerrainRender/HeightfieldConverter/: DirectComputeConverter.cpp  DirectComputeConverter.h  HeightfieldConverter.cpp  HeightfieldConverter.hlsl  HeightfieldConverter.vcxproj  HeightfieldConverter.vcxproj.filters  HeightfieldConverterPrivate.cpp  HeightfieldConverterPrivate.h  SoftwareConverter.h
PlanetTerrainRender/HeightfieldConverterTest/: HeightfieldConverterTest.vcxproj  d3dclass.cpp  graphicsclass.cpp  light.ps  light.vs  lightshaderclass.cpp  lightshaderclass.h  modelclass.cpp
PlanetTerrainRender/PlanetTerrainViewer/: Application.cpp  Application.h  Camera.cpp  Camera.h  Direct3DSystem.cpp  Direct3DSystem.h  GraphicsContext.cpp  GraphicsContext.h  KeyboardInput.cpp  KeyboardInput.h  Main.cpp  MouseInput.cpp  MouseInput.h  PlanetCameraController.cpp  PlanetCameraController.h  PlanetTerrainViewer.vcxproj  Scene.cpp  Scene.h  SimpleTerrain.ps  SimpleTerrain.vs  StaticTerrainRenderer.cpp  StaticTerrainRenderer.h
PlanetTerrainRender/TerrainDataManager/: TerrainDataBlock.cpp  TerrainDataBlock.h  TerrainDataManager.cpp  TerrainDataManager.vcxproj  TerrainDataManager.vcxproj.filters  TerrainDataManagerImpl.h  TerrainObjectManagerImpl.cpp  TerrainVisibilityManager.cpp  TerrainVisibilityManager.h  TerrainVisibilityManagerImpl.cpp  TerrainVisibilityManagerImpl.h
PlanetTerrainRender/TerrainRenderingPipeline/: TerrainRender.hlsl
PlanetTerrainRender/include/: HeightfieldConverter.h  TerrainDataManager.h  TerrainObjectManager.h  TerrainVisibilityManager.h
doc/: Описание концепции ResourceManager.docx
include/: 3DEngineInterface.h  C3DBaseFaceSet.h  C3DBaseManager.h  C3DBaseMaterial.h  C3DBaseMesh.h  C3DBaseObject.h  C3DBaseObjectManager.h  C3DBaseResource.h  C3DBaseTechnique.h  C3DBaseTexture.h  ResourceManager.h  ResourceManagerLink.h  VisibilityManager.h
lib/: ResourceManager.lib  VisibilityManager.lib
osgTestApp/: CMakeLists.txt  Managers.cpp  Managers.h  Resources.cpp  Resources.h  main.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Common.cpp  Common.h  CrashHandler.cpp  Debug.cpp  Debug.h  FuncForOkTree.h  GridIterator.h  GridManager.cpp  GridManager.h  IGrid.h  Log.cpp  Log.h  OkTree.cpp  OkTree.h  OkTreeGridIterator.cpp  OkTreeGridIterator.h  PrivateInterface.h  ResourceManager.cpp  StdAfx.cpp  StdAfx.h  VisibilityManager.cpp  vecmath.h
src/Containers/: BitField.cpp  BitField.h  Store.h
src/Geometry/: BoundBox.h  InFrustum.h  IndependenceGeometryFunctions.h  Matrix.cpp  Matrix.h  Matrix.inl  Plane.h  Vector3D.cpp  Vector3D.h
src/STLString/: StlUtil.cpp  StlUtil.h
(+273 files in other folders)
